--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,10 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
 
 
+//exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.2'
+    implementation 'com.danikula:videocache:2.7.1'
+
+
+
 }
