--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".util.MyApplication"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".profile.Account.SignOut"></activity>
+<!--        <activity android:name=".MainActivity3"></activity>-->
+        <activity android:name=".ViewVideo" />
+        <activity android:name=".profile.Account.SignOut" />
         <activity android:name=".profile.Account.Contest" />
         <activity android:name=".profile.Account.Help" />
+
         <activity android:name=".profile.Account.Password_Reset" />
         <activity android:name=".profile.Account.About" />
-        <activity android:name=".activity_view_video" />
         <activity android:name=".profile.Account.EditProfile" />
         <activity android:name=".Intro.Intro" /> <!-- <intent-filter> -->
         <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -29,7 +32,6 @@
             android:theme="@style/Theme.Transparent" />
         <activity android:name=".home.Message_Request" />
         <activity android:name=".profile.ProfileActivity" />
-
         <activity android:name=".contest.Contest_Evaluation.Participant_Request" />
         <activity android:name=".contest.result.ResultDeclaredActivity" />
         <activity android:name=".contest.joined.joined_contest_overview_activity" />
@@ -39,7 +41,6 @@
         <activity android:name=".contest.joined.JoiningForm" />
         <activity android:name=".contest.ViewContestDetails" />
         <activity android:name=".profile.ViewProfileActivity" />
-
         <activity android:name=".contest.create.form" />
         <activity android:name=".contest.joined.fragment_joinedContest" />
         <activity android:name=".contest.create.fragment_createContest" />
@@ -48,47 +49,49 @@
         <activity android:name=".leaderboard.LeaderboardActivity" />
         <activity
             android:name=".login.login"
-            android:noHistory="true" >
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".contest.contestMainActivity" android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".contest.contestMainActivity"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".explore.Explore"
             android:windowSoftInputMode="adjustNothing" />
         <activity android:name=".profile.profile" />
         <activity android:name=".profile.Account.AccountSettingActivity" />
-    <activity android:name=".home.MainActivity"
-        android:hardwareAccelerated="true"/>
-
+        <activity
+            android:name=".home.MainActivity"
+            android:hardwareAccelerated="true" />
         <activity android:name=".login.register" />
         <activity android:name=".home.Chat_Activity" />
         <activity android:name=".contest.create.CheckContest" />
         <activity android:name=".contest.Contest_Evaluation.contest_evaluation_activity" />
-        <service android:name=".Notifications.FirebaseMessaging" android:exported="true" android:enabled="true">
 
-
+        <service
+            android:name=".Notifications.FirebaseMessaging"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-
         </service>
     </application>
+
     <meta-data
         android:name="com.google.firebase.messaging.some_id"
         android:value="some_id" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <dist:module dist:instant="true" />
 
