Refresh layout,Recycler view scrollbar configure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,8 @@
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".explore.Explore"
+            android:hardwareAccelerated="true"
+
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".profile.profile"
