--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <!--        <activity android:name=".MainActivity3"></activity>-->
+        <activity android:name=".contest.ranking"></activity>
+        <!-- <activity android:name=".MainActivity3"></activity> -->
         <activity android:name=".profile.Account.SignOut" />
         <activity android:name=".profile.Account.Contest" />
         <activity android:name=".profile.Account.Help" />
-
         <activity android:name=".profile.Account.Password_Reset" />
         <activity android:name=".profile.Account.About" />
         <activity android:name=".profile.Account.EditProfile" />
@@ -64,7 +63,6 @@
         <activity
             android:name=".explore.Explore"
             android:hardwareAccelerated="true"
-
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".profile.profile"
@@ -91,14 +89,13 @@
     <meta-data
         android:name="com.google.firebase.messaging.some_id"
         android:value="some_id" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <dist:module dist:instant="true" />
 
