--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,7 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.orion.orion">
-
-    <!-- User Permmissions needed-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
+    <!-- User Permmissions needed -->
     <application
         android:name=".util.MyApplication"
         android:icon="@mipmap/ic_launcher"
@@ -22,22 +13,20 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-
-
-        <!--Activities-->
-        <!--Login/Signup Section + Intro part       -->
+        <activity android:name=".FanFollowList"></activity>
+        <!-- Activities -->
+        <!-- Login/Signup Section + Intro part -->
         <activity android:name=".Intro.Intro" />
         <activity
             android:name=".login.login"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.register" />
-
-        <!--Home Section-->
+        <activity android:name=".login.register" /> <!-- Home Section -->
         <activity android:name=".home.Message_Request" />
         <activity
             android:name=".home.MainActivity"
@@ -45,14 +34,10 @@
         <activity android:name=".home.Chat_Activity" />
         <activity
             android:name=".home.ViewPromoted"
-            android:theme="@style/Theme.Transparent" />
-
-        <!--Explore Section-->
+            android:theme="@style/Theme.Transparent" /> <!-- Explore Section -->
         <activity
             android:name=".explore.Explore"
-            android:windowSoftInputMode="adjustNothing" />
-
-        <!--Contest Section-->
+            android:windowSoftInputMode="adjustNothing" /> <!-- Contest Section -->
         <activity android:name=".contest.create.form" />
         <activity android:name=".contest.create.CheckContest" />
         <activity android:name=".contest.ViewContestDetails" />
@@ -67,16 +52,17 @@
         <activity android:name=".contest.public_voting_media" />
         <activity
             android:name=".contest.contestMainActivity"
-            android:windowSoftInputMode="adjustNothing" />
-
-        <!--Leaderboard Section-->
-        <activity android:name=".leaderboard.LeaderboardActivity" />
-
-        <!--Profile Section-->
-        <activity android:name=".profile.profile"
-            android:noHistory="true"/>
-        <activity android:name=".profile.ProfileActivity" />
-        <activity android:name=".profile.ViewProfileActivity" />
+            android:windowSoftInputMode="adjustNothing" /> <!-- Leaderboard Section -->
+        <activity android:name=".leaderboard.LeaderboardActivity" /> <!-- Profile Section -->
+        <activity
+            android:name=".profile.profile"
+            android:noHistory="true" />
+        <activity
+            android:name=".profile.ProfileActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".profile.ViewProfileActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".profile.Account.AccountSettingActivity" />
         <activity android:name=".profile.Account.EditProfile" />
         <activity android:name=".profile.Account.Password_Reset" />
@@ -89,14 +75,14 @@
             android:theme="@style/MyMaterialThemeProfile" />
         <activity
             android:name=".profile.PostPhotoActivity"
-            android:theme="@style/MyMaterialThemeProfile" />
-
-        <!--Extras-->
+            android:theme="@style/MyMaterialThemeProfile" /> <!-- Extras -->
         <activity android:name=".CommentActivity" />
-        <activity android:name=".ViewPostActivity" />
-
-
-        <!--Services-->
+        <activity
+            android:name=".ViewPostActivity"
+            android:launchMode="singleTop" /> <!-- Services -->
+        <meta-data
+            android:name="com.google.firebase.messaging.some_id"
+            android:value="some_id" /> <!-- Meta data -->
         <service
             android:name=".Notifications.FirebaseMessaging"
             android:enabled="true"
@@ -105,13 +91,16 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-        <!-- Meta data-->
-        <meta-data
-            android:name="com.google.firebase.messaging.some_id"
-            android:value="some_id" />
-
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <dist:module dist:instant="true" />
 
