--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.orion.orion">
-    <!-- User Permmissions needed -->
+
     <application
         android:name=".util.MyApplication"
         android:icon="@mipmap/ic_launcher"
@@ -13,8 +13,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".profile.Account.FanFolllowing.FanFollowList"></activity>
-        <!-- Activities -->
+        <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".profile.Account.FanFolllowing.FanFollowList" /> <!-- Activities -->
         <!-- Login/Signup Section + Intro part -->
         <activity android:name=".Intro.Intro" />
         <activity
@@ -93,14 +93,14 @@
         </service>
     </application>
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <dist:module dist:instant="true" />
 
