--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
-            minifyEnabled false
+        debug {
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,10 +38,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.github.judemanutd:autostarter:1.0.3'
+
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -49,7 +48,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
-    implementation 'com.google.firebase:firebase-firestore:22.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
@@ -80,5 +78,5 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
 
     //    update
-    implementation 'com.google.android.play:core:1.6.1'
+    implementation 'com.google.android.play:core:1.8.3'
 }
