comments in view post

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
     }
     buildTypes {
         debug {
+            shrinkResources false
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        release {
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
