--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:name=".util.MyApplication"
-        android:icon="@drawable/orion_logo_png"
+        android:icon="@drawable/orion_logo_png_black"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/orion_logo_png"
+        android:roundIcon="@drawable/orion_logo_png_black"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
