--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
     }
     buildTypes {
         debug {
-            shrinkResources false
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
