--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.orion.orion">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <dist:module dist:instant="true" />
+
     <application
         android:name=".util.MyApplication"
         android:icon="@drawable/orion_logo_png_black"
@@ -13,7 +23,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <!-- Activities -->
+        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".MessagesActivity" /> <!-- Activities -->
         <!-- Splash Screen -->
         <activity
             android:name=".SplashActivity"
@@ -23,16 +34,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- Login/Signup Section + Intro part -->
+        </activity> <!-- Login/Signup Section + Intro part -->
         <activity
             android:name=".login.login"
-            android:noHistory="true">
-        </activity>
+            android:noHistory="true" />
         <activity
             android:name=".login.register"
-            android:noHistory="true" />
-        <!-- Home Section -->
+            android:noHistory="true" /> <!-- Home Section -->
         <activity android:name=".home.Message_Request" />
         <activity
             android:name=".home.MainActivity"
@@ -40,12 +48,10 @@
         <activity android:name=".home.Chat_Activity" />
         <activity
             android:name=".home.ViewPromoted"
-            android:theme="@style/Theme.Transparent" />
-        <!-- Explore Section -->
+            android:theme="@style/Theme.Transparent" /> <!-- Explore Section -->
         <activity
             android:name=".explore.Explore"
-            android:windowSoftInputMode="adjustNothing" />
-        <!-- Contest Section -->
+            android:windowSoftInputMode="adjustNothing" /> <!-- Contest Section -->
         <activity android:name=".contest.create.form" />
         <activity android:name=".contest.create.CheckContest" />
         <activity android:name=".contest.ViewContestDetails" />
@@ -60,10 +66,8 @@
         <activity android:name=".contest.public_voting_media" />
         <activity
             android:name=".contest.contestMainActivity"
-            android:windowSoftInputMode="adjustNothing" />
-        <!-- Leaderboard Section -->
-        <activity android:name=".leaderboard.LeaderboardActivity" />
-        <!-- Profile Section -->
+            android:windowSoftInputMode="adjustNothing" /> <!-- Leaderboard Section -->
+        <activity android:name=".leaderboard.LeaderboardActivity" /> <!-- Profile Section -->
         <activity
             android:name=".profile.profile"
             android:noHistory="true" />
@@ -84,14 +88,11 @@
             android:theme="@style/MyMaterialThemeProfile" />
         <activity
             android:name=".profile.PostPhotoActivity"
-            android:theme="@style/MyMaterialThemeProfile" />
-        <!-- Extras -->
+            android:theme="@style/MyMaterialThemeProfile" /> <!-- Extras -->
         <activity android:name=".CommentActivity" />
         <activity
             android:name=".ViewPostActivity"
-            android:launchMode="singleTop" />
-
-        <!-- Services -->
+            android:launchMode="singleTop" /> <!-- Services -->
         <meta-data
             android:name="com.google.firebase.messaging.some_id"
             android:value="some_id" /> <!-- Meta data -->
@@ -104,14 +105,5 @@
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <dist:module dist:instant="true" />
 
 </manifest>
