--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         <activity android:name=".chat.Message_Request" />
         <activity android:name=".chat.Chat_Activity" />
         <!-- Contest Section -->
-        <activity android:name=".contest.create.form" />
+        <activity android:name=".contest.create.CreateForm" />
         <activity android:name=".contest.create.CheckContest" />
         <activity android:name=".contest.ViewContestDetails" />
         <activity android:name=".contest.joined.JoiningForm" />
