--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,23 @@
-<?xml version="1.1" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.orion.orion">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-
-    <dist:module dist:instant="true" />
-
     <application
         android:name=".util.MyApplication"
+        android:allowBackup="true"
         android:icon="@drawable/orion_logo_png_black"
         android:label="@string/app_name"
-        android:allowBackup="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/orion_logo_png_black"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".contest.create.CreatedActivity"></activity>
+        <activity android:name=".contest.joined.JoinedActivity" />
+        <activity android:name=".contest.UpcomingContestActivity" />
         <activity android:name=".NotificationActivity" />
         <activity android:name=".chat.MessagesActivity" /> <!-- Activities -->
         <!-- Splash Screen -->
@@ -45,8 +37,7 @@
             android:name=".login.RegisterActivity"
             android:noHistory="true" /> <!-- Home Section -->
         <activity android:name=".chat.Message_Request" />
-        <activity android:name=".chat.Chat_Activity" />
-        <!-- Contest Section -->
+        <activity android:name=".chat.Chat_Activity" /> <!-- Contest Section -->
         <activity android:name=".contest.create.CreateForm" />
         <activity android:name=".contest.create.CheckContest" />
         <activity android:name=".contest.ViewContestDetails" />
@@ -77,8 +68,7 @@
         <activity android:name=".profile.Account.Password_Reset" />
         <activity android:name=".profile.Account.Contest" />
         <activity android:name=".profile.Account.About" />
-        <activity android:name=".profile.Account.FanFolllowing.FanFollowList" />
-        <!-- Extras -->
+        <activity android:name=".profile.Account.FanFolllowing.FanFollowList" /> <!-- Extras -->
         <!-- Services -->
         <meta-data
             android:name="com.google.firebase.messaging.some_id"
@@ -91,7 +81,18 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <dist:module dist:instant="true" />
 
 </manifest>
